hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__set@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { ptr, { i1, i16 } } @_hl.main.1(ptr %0, i64 %1, i16 %2) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca { i1, i16 }, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i64, align 8
  %"2_2" = alloca i16, align 2
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i64 %1, ptr %"2_1", align 4
  store i16 %2, ptr %"2_2", align 2
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i64, ptr %"2_1", align 4
  %"2_23" = load i16, ptr %"2_2", align 2
  %3 = alloca i16, align 2, !dbg !15
  store i16 %"2_23", ptr %3, align 2, !dbg !15
  %4 = call i1 @__rt__list__set(ptr %"2_01", i64 %"2_12", ptr %3), !dbg !15
  %5 = load i16, ptr %3, align 2, !dbg !15
  %6 = insertvalue { i1, i16 } { i1 false, i16 poison }, i16 %5, 1, !dbg !15
  %7 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %"2_23", 1, !dbg !15
  %8 = select i1 %4, { i1, i16 } %7, { i1, i16 } %6, !dbg !15
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !15
  store { i1, i16 } %8, ptr %"4_1", align 2, !dbg !15
  %"4_04" = load ptr, ptr %"4_0", align 8
  %"4_15" = load { i1, i16 }, ptr %"4_1", align 2
  store ptr %"4_04", ptr %"0", align 8
  store { i1, i16 } %"4_15", ptr %"1", align 2
  %"06" = load ptr, ptr %"0", align 8
  %"17" = load { i1, i16 }, ptr %"1", align 2
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %"06", 0
  %mrv8 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %"17", 1
  ret { ptr, { i1, i16 } } %mrv8
}

declare i1 @__rt__list__set(ptr, i64, ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !14, !13}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, { i1, i16 } }", file: !2, size: 80, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i16 }", file: !2, size: 16, align: 8, elements: !11)
!11 = !{!12, !13}
!12 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!14 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!15 = !DILocation(line: 27062, column: 402, scope: !3)
